# BorisAgentStudio

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/commands/: cardtransfer.md  insight.md  refresh.md  report.md  team.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/websocket/: mod.rs
data/: capability-changelog.md
data/capability-snapshots/: 2026-01-25-capability-snapshot.json
data/harmony-outputs/: test1.html  test1.json
data/sessions/: 2026-01-25-001-knowledge-markers.json  2026-01-25-002-context-flow-chart.json  2026-01-25-003-layout-optimization.json  2026-01-25-004-interactive-particles-skill.json  2026-01-25-005-context-type-fallback.json  2026-01-25-006-responsive-detail-panel.json  2026-01-25-007-coding-standards.json  2026-01-25-008-loop-visualization.json  2026-01-25-009-decision-transparency.json  2026-01-25-010-context-type-differentiation.json  2026-01-25-011-std001-evolution.json  2026-01-25-012-fix-v3-session-visualization.json  2026-01-25-013-implement-spec011-hierarchical-visualization.json  2026-01-25-014-header-particles-spec.json  2026-01-25-015-implement-header-particles.json  2026-01-26-001-project-enhancement-roadmap.json  2026-01-26-002-implement-project-enhancements.json  2026-01-26-003-particle-explode-reunite.json  (+19 more)
frontend/: index.html  package-lock.json  package.json
teams/: PROMPTS.md  README.md  TEAM-001-balanced.yaml  TEAM-002-risk-aware.yaml  TEAM-003-boris-team.yaml
(+172 files in other folders)
