[package]
name = "boris-agent-studio-backend"
version = "0.1.0"
edition = "2021"
description = "Code Agent visualization backend"
authors = ["Boris Huai"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
